--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<a href="#banner" class="image fit"><img src="images/blah1.png" alt="" /></a>
+								<a href="#banner" class="button circled scrolly"><img src="images/blah1.png" width="100" height="100" alt="" /></a>
 							</header>						
 							<footer>
 								<h1><a href="index.html" id="logo">Rachel Yang</a></h1>
@@ -66,6 +66,7 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
+							<div class="12u">
 
 								<!-- Contact -->
 									<section class="contact">
