--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Helios by HTML5 UP</title>
+		<title>Rachel Yang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,12 +22,12 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<a href="#banner" class="button circled scrolly"><img src="images/blah1.png" width="100" height="100" alt="" /></a>
+								<a href="#banner" class="button circled scrolly"><img src="images/blah1.png" width="50" height="50" alt="" /></a>
 							</header>						
 							<footer>
 								<h1><a href="index.html" id="logo">Rachel Yang</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>enlightened simplicity</p>
 							</footer>
 						</div>
 
