--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<a href="#banner" class="button circled scrolly"><img src="images/blah1.png" width="50" height="50" alt="" /></a>
+								<a href="#banner" class="button circled scrolly"><img src="images/blah4.png" width="75" height="75" alt="" /></a>
 							</header>						
 							<footer>
 								<h1><a href="index.html" id="logo">Rachel Yang</a></h1>
 								<hr />
-								<p>enlightened simplicity</p>
+								<p>an undergraduate student, conscious engineer, passionate explorer in pursuit of enlightened simplicity</p>
 							</footer>
 						</div>
 
