--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<a href="#banner" class="button circled scrolly"><img src="images/blah4.png" width="75" height="75" alt="" /></a>
+								<a href="#banner" class="button circled scrolly"><td><img src="images/blah4.png" width="75" height="75" alt="" /></td></a>
 							</header>						
 							<footer>
 								<h1><a href="index.html" id="logo">Rachel Yang</a></h1>
 								<hr />
-								<p>an undergraduate student, conscious engineer, passionate explorer in pursuit of enlightened simplicity</p>
+								<p>undergraduate student, conscious engineer, and passionate explorer in pursuit of enlightened simplicity</p>
 							</footer>
 						</div>
 
@@ -70,9 +70,6 @@
 
 								<!-- Contact -->
 									<section class="contact">
-										<header>
-											<h3>Don't be a stranger!</h3>
-										</header>
 										<p>rachel.yang@students.olin.edu || 314.277.7604</p>
 										<ul class="icons">
 <!-- 											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
