--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<p><span class="avatar"><img src="images/ry1.1.png" width="250" height="175" alt="" /></span></p>	
+							<p><span class="avatar"><img src="Lens/images/ry.png" width="250" height="175" alt="" /></span></p>	
 							<h2>Rachel Yang</h2>		
 							<p>Undergraduate student<br />
 							Conscious engineer<br />
