--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
 							<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 <!-- 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
 <!-- 							<li><a href="https://www.pinterest.com/pandasia02/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
-							<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 <!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 
 						</ul>
