--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</li>
 								<li class="icon fa-code">
 									<h3>Coding</h3>
-									<p>I've spent the majority of my time developing skills in Python, but I've also tried out MATLAB and HTML/CSS. I'm hoping to expand the bredth and depth of programming languages during my time at Olin. </p>
+									<p>I've spent the majority of my time developing skills in Python, but I've also tried out MATLAB and HTML/CSS. I'm hoping to expand the breadth and depth of programming languages during my time at Olin. </p>
 								</li>
 								<li class="icon fa-child">
 									<h3>User-Oriented Design</h3>
