--- a/projects.html
+++ b/projects.html
@@ -63,13 +63,22 @@
 										<img src="projects/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
+										<h3><a href="Lens/pennyboards.html" class="link">Sandwich Composite Pennyboards</a></h3>
+										<p>fall 2016</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="projects/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
 										<h3><a href="Lens/elephant.html" class="link">Biomimicry Play Experience</a></h3>
 										<p>fall 2015</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic04.jpg" alt="" />
+										<img src="projects/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/intart.html" class="link">Interactive Art</a></h3>
@@ -78,7 +87,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic05.jpg" alt="" />
+										<img src="projects/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/bubble.html" class="link">Bubble Trouble</a></h3>
@@ -87,7 +96,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic06.jpg" alt="" />
+										<img src="projects/pic07.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/mining.html" class="link">Text Mining + Word Art</a></h3>
@@ -96,7 +105,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic07.jpg" alt="" />
+										<img src="projects/pic08.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/misc.html" class="link">Miscellaneous</a></h3>
@@ -105,7 +114,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic08.jpg" alt="" />
+										<img src="projects/pic09.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/under.html" class="link">Under Development</a></h3>
