--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>The Ying to Rachel Yang</h2>
+								<h2>The Yin to Rachel Yang</h2>
 								<p>A bigger glimpse into who I am and what I love.</p>
 							</header>
 							<ul class="features">
