--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<p><span class="avatar"><img src="Lens/images/ry.png" width="250" height="175" alt="" /></span></p>	
-							<h2>Rachel Yang</h2>		
+							<p><span class="avatar"><img src="Lens/images/ry.png" width="250" height="175" alt="" /></span></p>
+							<h2>Rachel Yang</h2>
 							<p>Undergraduate student<br />
 							Conscious engineer<br />
 							Passionate explorer<br />
 							in pursuit of enlightened simplicity</p>
-							
+
 
 						</div>
 						<a href="#one" class="more scrolly"><font color=#FF4500>About me</font></a>
@@ -55,7 +55,7 @@
 							<header class="major">
 								<h2>Hi there!</h2>
 								<p>Ideating, prototyping, and blooming at Franklin W. Olin College of Engineering, I'm aspiring to graduate in the spring of 2019 with a degree of Engineering with a concentration in Computing. Thanks for taking the time to get to know me!</p>
-								
+
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-lightbulb-o major style1"><span class="label">Lorem</span></span></li>
@@ -75,7 +75,7 @@
 							<ul class="features">
 								<li class="icon fa-home">
 									<h3>Reppin' the 314</h3>
-									<p>A Midwesterner at heart, I grew up in Saint Louis, MO, raised by two breathtakingly passionate, dedicated visonaries who immigrated from Korea. I got a peek into their tongue-tyingly frustrating world of English, which drew me to math and music—two universal languages that effortlessly transcended these language barriers.</p>
+									<p>A Midwesterner at heart, I grew up in Saint Louis, MO, raised by two breathtakingly passionate, dedicated visionaries who immigrated from Korea. I got a peek into their tongue-tyingly frustrating world of English, which drew me to math and music—two universal languages that effortlessly transcended these language barriers.</p>
 								</li>
 								<li class="icon fa-asterisk">
 									<h3>Why Engineering</h3>
