--- a/Lens/tetris.html
+++ b/Lens/tetris.html
@@ -2,10 +2,10 @@
 
 <html>
 	<head>
-		<title>Interactive Art | RYang</title>
+		<title>Terminal Tetris | RYang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />>
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body>
@@ -16,27 +16,27 @@
 				<!-- Header -->
 					<header id="header">
 						<p><a href="../projects.html">BACK TO PROJECTS</a></p>
-						<h6>interactive art</h6>
-						<p>in the pursuit of an interactive artistic experience that bridged sensing and projection, my Software Design team and I designed Project Echo.
-							 we utilized OpenCV by detecting the prescence and movement of a bright green beanie, as well as AlsaAudio to detect changing volume levels of sound.</p>
-						<p><a href="https://sites.google.com/site/interactiveprojectedart/home">project website</a> //
-							 <a href="https://github.com/RachelYang02/SD16FinalProject">github</a> // <a href="https://www.youtube.com/watch?v=oBXaJ1ul6P0">video</a></p>
+						<h4>terminal tetris</h4>
+						<p>in exploring the applications of C for our Software Systems class, my team and I replicated the timeless game of Tetris, but designed it with the
+              working developer in mind. our version runs straight from the command line and even includes a "boss mode" that pauses and disguises the game
+              for whenever the boss walks by. warning: this game is not to be played by recovering tetris addicts. </p>
+						<p><a href="https://thecardkid.github.io/terminally-tetris/">project website</a> // <a href="https://github.com/thecardkid/terminally-tetris">github</a></p>
 					</header>
 
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/intart/full/01.jpg" data-position="left center"><img src="images/intart/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/tetris/full/01.gif"><img src="images/tetris/thumbs/01.png" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/intart/full/02.jpg"><img src="images/intart/thumbs/02.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/tetris/full/02.png"><img src="images/tetris/thumbs/02.png" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail"  href="images/intart/full/03.jpg" data-position="top center"><img src="images/intart/thumbs/03.jpg" alt="" /></a>
+							<a class="thumbnail"  href="images/tetris/full/03.jpg" data-position="top center"><img src="images/tetris/thumbs/03.jpg" alt="" /></a>
 						</article>
 
 						<article>
-							<a class="thumbnail" href="images/intart/full/04_01.jpg"><img src="images/intart/thumbs/04.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/tetris/full/04.jpg"><img src="images/tetris/thumbs/04.jpg" alt="" /></a>
 						</article>
 					</section>
 
