--- a/Lens/elephant.html
+++ b/Lens/elephant.html
@@ -5,10 +5,7 @@
 		<title>Biomimicry | RYang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body>
@@ -18,11 +15,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<p><a href="../projects.html">BACK TO PROJECTS</a></p>	
-						<h4>biomimicry play experience</h4>
-						<p>for Design Nature, we engaged fourth graders with a fun, challenging, consistent game that promoted both competition and teamwork. we based our game off of the interaction mother elephants have with their children during feeding. we used a claw and slingshot system to allow the momma to pick up "food," or ping pong balls, and shoot them to her trapped child to give her enough energy to break out and escape.</p>
+						<p><a href="../projects.html">BACK TO PROJECTS</a></p>
+						<h5>biomimicry play experience</h5>
+						<p>for Design Nature, we engaged fourth graders with a fun, challenging, consistent game that promoted both competition and teamwork. we based our game off of
+							 the interaction mother elephants have with their children during feeding. we used a claw and slingshot system to allow the momma to pick up "food," or ping
+							 pong balls, and shoot them to her trapped child to give her enough energy to break out and escape.</p>
 						<p><a href="https://www.youtube.com/watch?v=1H3AItjxp3c">video</a></p>
-
 					</header>
 
 				<!-- Thumbnail -->
@@ -47,29 +45,24 @@
 						</article>
 					</section>
 
-					<footer id="footer">
-						<ul class="icons">
-<!-- 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
-<!-- 							<li><a href="https://www.pinterest.com/pandasia02/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
-							<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						</ul>
-<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<ul class="copyright">
-<!-- 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-							<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
-						</ul>
-					</footer>
-
+					<!-- Footer -->
+						<footer id="footer">
+						<!-- Contact -->
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://vsco.co/avocadary" class="icon fa-spinner"><span class="label">VSCO</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							</ul>
+							<ul class="copyright">
+									<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
+							</ul>
+						</footer>
 			</div>
 
 		<!-- Scripts -->
-<!-- 			<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
