--- a/Lens/misc.html
+++ b/Lens/misc.html
@@ -5,10 +5,7 @@
 		<title>Miscellaneous | RYang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body>
@@ -18,69 +15,78 @@
 
 				<!-- Header -->
 					<header id="header">
-						<p><a href="../projects.html">BACK TO PROJECTS</a></p>	
-						<h2>miscellaneous</h2>
+						<p><a href="../projects.html">BACK TO PROJECTS</a></p>
+						<h3>miscellaneous</h3>
 						<p>a random motley potpourri of smaller-scaled projects.</p>
-
 					</header>
 
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/misc/full/01.jpg" data-position="left center"><img src="images/misc/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/misc/full/01.jpg"><img src="images/misc/thumbs/01.jpg" alt="" /></a>
+							<h2>EDUCARE EDUTEDDY</h2>
+							<p>for our User-Oriented Collaborative Design class, we worked with educators of students with special needs. after months of user visits,
+							   framework mapping, and synthesizing, we designed a smart-teddy that supports the student after an emotional crisis in the classroom,
+							   provides the teacher the recuperation time (s)he needs, and collects anonymous data to improve post-crisis strategy tools long-term.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/misc/full/02.png"><img src="images/misc/thumbs/02.png" alt="" /></a>
+							<h2>COLOR SENSING PEN</h2>
+							<p>a pen that scans an object, detects its color, and then proceeds to write in that perceived color. check out our project website
+							   <a href="http://poe.olin.edu/2016/Pinc/index.html">here</a>.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/misc/full/03.jpg" data-position="left center"><img src="images/misc/thumbs/03.jpg" alt="" /></a>
 							<h2>LOFT</h2>
-							<p>one of seven rooms with expanded celings in our dorm building, my roommate and I got voted to build a loft to live in for the year. it took us simply a day to drill together the wooden foundation, and simply the next couple of weeks to fully furnish it and make it feel like home.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/misc/full/02.jpg"><img src="images/misc/thumbs/02.jpg" alt="" /></a>
-							<h2>3D SCANNER</h2>
-							<p>using Arduino and servo motors, we built a pan-tilt motor complete with an infrared distance sensor that can scan an object and plot its 3D shape in MATLAB.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/misc/full/03.jpg" data-position="top center"><img src="images/misc/thumbs/03.jpg" alt="" /></a>
-							<h2>SECRET SANTA</h2>
-							<p>an upperclassmate and I exchanged gifts for the holiday season. I wanted to craft something personal, and I knew that he lives and breathes music. inspired by a vinyl record, I added details that encapsulated some of our inside jokes from the year. </p>
+							<p>one of seven rooms with expanded celings in our dorm building, my roommate and I got voted to build a loft to live in for the year.
+								 it took us simply a day to drill together the wooden foundation, and simply the next couple of weeks to fully furnish it and make it feel like home.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/misc/full/04.jpg"><img src="images/misc/thumbs/04.jpg" alt="" /></a>
-							<h2>IDIN</h2>
-							<p>as a researcher for the International Development Innovation Network, my co-researcher and I spent the semester designing hands-on tutorials for those in low-income and resource-poor areas to teach useful fabrication techniques. our curricula included how to make a charcoal press, a sheet metal water bucket, and a living machine.</p>
+							<h2>3D SCANNER</h2>
+							<p>using Arduino and servo motors, we built a pan-tilt motor complete with an infrared distance sensor that can scan an object and
+								 plot its 3D shape in MATLAB.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/misc/full/05.jpg" data-position="top center"><img src="images/misc/thumbs/05.jpg" alt="" /></a>
 							<h2>RICA'S PANINIS</h2>
-							<p>every other Friday, our hallway opens our doors for an open market called "4N Friday." my roommate and I sell homemade paninis, and strive simply to break even and to bring joy to people's lives with a gooey, hot-pressed sandwich that oozes with love, happiness, and good vibes.</p>
+							<p>every other Friday, our hallway opens our doors for an open market called "4N Friday." my roommate and I sell homemade paninis, and strive simply to
+								 break even and to bring joy to people's lives with a gooey, hot-pressed sandwich that oozes with love, happiness, and good vibes.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/misc/full/06.jpg"><img src="images/misc/thumbs/06.jpg" alt="" /></a>
-							<h2>GINGER ALE</h2>
-							<p>currently brewing our first ginger bug culture, our breaths stand abated as we wait to concoct our own ginger ale.</p>
+							<h2>IDIN</h2>
+							<p>as a researcher for the International Development Innovation Network, my co-researcher and I spent the semester designing hands-on tutorials for those
+								 in low-income and resource-poor areas to teach useful fabrication techniques. our curricula included how to make a charcoal press, a sheet metal water
+								 bucket, and a living machine. check out one of our instructor guides
+								 <a href="https://www.idin.org/sites/default/files/resources/Instructor%20Guide%20Charcoal%20Press%20v1.0%2020%20Jun%2016.pdf">here</a>.</p>
 						</article>
-					</section>	
+						<article>
+							<a class="thumbnail" href="images/misc/full/07.jpg" data-position="top center"><img src="images/misc/thumbs/07.jpg" alt="" /></a>
+							<h2>SECRET SANTA</h2>
+							<p>an upperclassmate and I exchanged gifts for the holiday season. I wanted to craft something personal, and I knew that he lives and breathes music.
+								 inspired by a vinyl record, I added details that encapsulated some of our inside jokes from the year. </p>
+						</article>
+					</section>
 
-					<footer id="footer">
-						<ul class="icons">
-<!-- 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
-<!-- 							<li><a href="https://www.pinterest.com/pandasia02/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
-							<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						</ul>
-<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-						<ul class="copyright">
-<!-- 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-							<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
-						</ul>
-					</footer>
-
+					<!-- Footer -->
+						<footer id="footer">
+						<!-- Contact -->
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://vsco.co/avocadary" class="icon fa-spinner"><span class="label">VSCO</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							</ul>
+							<ul class="copyright">
+									<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
+							</ul>
+						</footer>
 			</div>
 
 		<!-- Scripts -->
-<!-- 			<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
