--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Rachel Yang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body class="landing">
 
@@ -54,7 +47,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Hi there!</h2>
-								<p>Ideating, prototyping, and blooming at Franklin W. Olin College of Engineering, I'm aspiring to graduate in the spring of 2019 with a degree of Engineering with a concentration in Computing. Thanks for taking the time to get to know me!</p>
+								<p>Ideating, prototyping, and blooming at Franklin W. Olin College of Engineering, I'm aspiring to graduate in the spring of 2019 with a
+									 degree of Engineering with a concentration in Computing. Thanks for taking the time to get to know me!</p>
 
 							</header>
 							<ul class="icons major">
@@ -75,54 +69,53 @@
 							<ul class="features">
 								<li class="icon fa-home">
 									<h3>Reppin' the 314</h3>
-									<p>A Midwesterner at heart, I grew up in Saint Louis, MO, raised by two breathtakingly passionate, dedicated visionaries who immigrated from Korea. I got a peek into their tongue-tyingly frustrating world of English, which drew me to math and music—two universal languages that effortlessly transcended these language barriers.</p>
+									<p>A Midwesterner at heart, I grew up in Saint Louis, MO, raised by two breathtakingly passionate, dedicated visionaries who immigrated from Korea.
+										 I got a peek into their tongue-tyingly frustrating world of English, which drew me to math and music—two universal languages that effortlessly
+										 transcended these language barriers.</p>
 								</li>
 								<li class="icon fa-asterisk">
 									<h3>Why Engineering</h3>
-<!-- 									<p>The hobbies that made me radiate euphoria as a kid share the same elements as engineering. Engineering has that satisfying resolution from problem-solving as puzzles do; it has that interdisciplinary intersection of art and design and technology as mixed media art does; but best of all, it combines these elements into a product that is functional, effective, purposeful.</p> -->
-
-
-									<p>Mixed media art was my first true love. There was this euphoria in repurposing, in problem-solving, in intersecting art and design and technology. Engineering, too, allows me to radiate with this euphoria. But then it goes even further: resulting in a final product that is functional, effective, purposeful. </p>
+									<p>Mixed media art was my first true love. There was this euphoria in repurposing, in problem-solving, in intersecting art and design and technology.
+										 Engineering, too, allows me to radiate with this euphoria. But then it goes even further: resulting in a final product that is functional, effective,
+										 purposeful. </p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Coding</h3>
-									<p>I've spent the majority of my time developing skills in Python, but I've also tried out MATLAB and HTML/CSS. I'm hoping to expand the breadth and depth of programming languages during my time at Olin. </p>
+									<p>I've spent the majority of my time developing skills in Python, but I've also tried out MATLAB and HTML/CSS. I'm hoping to expand the breadth and
+										 depth of programming languages during my time at Olin. </p>
 								</li>
 								<li class="icon fa-child">
 									<h3>User-Oriented Design</h3>
-									<p>From fourth-graders to blind sailors, I've been fortunate enough to work with and design for people that have changed my life far more than I would have even dreamed of changing theirs. Check out Projects for more info! </p>
+									<p>From fourth-graders to blind sailors, I've been fortunate enough to work with and design for people that have changed my life far more than I would
+										 have even dreamed of changing theirs. Check out Projects for more info! </p>
 								</li>
 								<li class="icon fa-globe">
 									<h3>Bucket List</h3>
-									<p>My to-do list in life seems almost endless, but it includes: skydiving, cutting my hair empoweringly short, releasing an iOS app to the App Store, designing and constructing my own multi-functional furniture.</p>
+									<p>My to-do list in life seems almost endless, but it includes: skydiving, cutting my hair empoweringly short, releasing an iOS app to the App Store,
+										 designing and constructing my own multi-functional furniture.</p>
 								</li>
 								<li class="icon fa-ellipsis-h">
 									<h3>To be continued</h3>
-									<p>I'm still constantly and incessantly experimenting, testing, experiencing. Currently, I'm exploring with ukelele, with web design, with app development. </p>
+									<p>I'm still constantly and incessantly experimenting, testing, experiencing. Currently, I'm exploring with guitalele, with web design, with
+										 app development. </p>
 								</li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-					<!-- Contact -->
-						<ul class="icons">
-<!-- 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
-<!-- 							<li><a href="https://www.pinterest.com/pandasia02/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
-							<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-
-						</ul>
-						<ul class="copyright">
-<!-- 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-								<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
-						</ul>
-					</footer>
-
+					<!-- Footer -->
+						<footer id="footer">
+						<!-- Contact -->
+							<ul class="icons">
+								<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://vsco.co/avocadary" class="icon fa-spinner"><span class="label">VSCO</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							</ul>
+							<ul class="copyright">
+									<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
+							</ul>
+						</footer>
 			</div>
 
 		<!-- Scripts -->
@@ -131,7 +124,6 @@
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
 	</body>
