--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
-	TODO:
-		change subtitle under projects
--->
 <html>
 	<head>
 		<title>Projects | Rachel Yang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -29,7 +19,6 @@
 						<nav id="nav_helios">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-<!-- 								<li><a href="inspiration.html">Inspiration</a></li> -->
 								<li><a href="projects.html">Projects</a></li>
 								<li><a href="resume.html">Resume</a></li>
 								<li><a href="contact.html">Contact</a></li>
@@ -72,13 +61,22 @@
 										<img src="projects/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
+										<h3><a href="Lens/tetris.html" class="link">Terminal Tetris</a></h3>
+										<p>spring 2017</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="projects/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
 										<h3><a href="Lens/elephant.html" class="link">Biomimicry Play Experience</a></h3>
 										<p>fall 2015</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic05.jpg" alt="" />
+										<img src="projects/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/intart.html" class="link">Interactive Art</a></h3>
@@ -87,7 +85,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic06.jpg" alt="" />
+										<img src="projects/pic07.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/bubble.html" class="link">Bubble Trouble</a></h3>
@@ -96,7 +94,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic07.jpg" alt="" />
+										<img src="projects/pic08.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/mining.html" class="link">Text Mining + Word Art</a></h3>
@@ -105,7 +103,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic08.jpg" alt="" />
+										<img src="projects/pic09.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/misc.html" class="link">Miscellaneous</a></h3>
@@ -114,7 +112,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="projects/pic09.jpg" alt="" />
+										<img src="projects/pic10.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Lens/under.html" class="link">Under Development</a></h3>
@@ -124,36 +122,28 @@
 							</section>
 
 					</article>
-			
+
 				<!-- Footer -->
 					<footer id="footer">
 					<!-- Contact -->
 						<ul class="icons">
-<!-- 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<li><a href="https://www.facebook.com/rachel.yang.735" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/yangrs022/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
-<!-- 							<li><a href="https://www.pinterest.com/pandasia02/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li> -->
+							<li><a href="https://vsco.co/avocadary" class="icon fa-spinner"><span class="label">VSCO</span></a></li>
 							<li><a href="https://www.linkedin.com/in/rachel-yang022" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-<!-- 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-
 						</ul>
 						<ul class="copyright">
-<!-- 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 								<li>rachel.yang@students.olin.edu</li><li>314.277.7604</li>
 						</ul>
 					</footer>
 			</div>
 
 		<!-- Scripts -->
-<!-- 			<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<!-- 			<script src="assets/js/main.js"></script> -->
 			<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
 			<script type="text/javascript" src="invisible_debut.js" ></script>
 
