--- a/Lens/misc.html
+++ b/Lens/misc.html
@@ -27,7 +27,8 @@
 							<h2>EDUCARE EDUTEDDY</h2>
 							<p>for our User-Oriented Collaborative Design class, we worked with educators of students with special needs. after months of user visits,
 							   framework mapping, and synthesizing, we designed a smart-teddy that supports the student after an emotional crisis in the classroom,
-							   provides the teacher the recuperation time (s)he needs, and collects anonymous data to improve post-crisis strategy tools long-term.</p>
+							   provides the teacher the recuperation time (s)he needs, and collects anonymous data to improve post-crisis strategy tools long-term. Peek
+							 	 at our process <a href="https://docs.google.com/presentation/d/1xGf8jUMsSSBUGaoQK0W8bhTCBxk4itKmj9lqr4sRNfk/edit#slide=id.g1f3c7024d6_0_97">here</a>.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/misc/full/02.png"><img src="images/misc/thumbs/02.png" alt="" /></a>
