--- a/Lens/under.html
+++ b/Lens/under.html
@@ -24,9 +24,12 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/underdev/full/01.jpg"><img src="images/underdev/thumbs/01.jpg" alt="" /></a>
-							<h2>TBD</h2>
-							<p></p>
+							<a class="thumbnail" href="images/underdev/full/donatr.png"><img src="images/underdev/thumbs/donatr.png" alt="" /></a>
+							<h2>User Experience Design: Donors</h2>
+							<p>In the course, User Experience Design 2017, my team and I are designing
+							   a software interface prototype that facilitates the process of
+								 (and lowers the activation energy of) donating. See our current status
+							   <a href="	http://hfid.olin.edu/sa2018/jaapokki/index.html">here</a>.</p>
 						</article>
 					</section>
 
